fixed immutable list crash